--- a/public/index.html
+++ b/public/index.html
@@ -244,9 +244,9 @@
   </div>
   <p id="status-message" class="message"></p>
   <form id="quiz-form" class="hidden" onsubmit="submitQuiz(event)">
-    <input type="text" id="name" placeholder="Your Name" required />
+    <input type="text" id="name" placeholder="Dit navn / உங்கள் பெயர்" required />
     <div id="questions"></div>
-    <button type="submit">Submit</button>
+    <button type="submit">Send</button>
   </form>
 </body>
 </html>
